feat: comprehensive production readiness improvements
Security (Critical):
- Add RBAC with UserRole enum (USER/ADMIN)
- Implement role-based JWT tokens with authorities
- Add @PreAuthorize for admin endpoints
- Move secrets to environment variables (DB_PASSWORD, ZHIPU_API_KEY, JWT_SECRET, CORS_ORIGINS)
- Configure CORS from environment

Reliability (High):
- Add Redis distributed lock for scheduled tasks
- Fix N+1 query in FavoriteAppService with batch category lookup
- Add CategoryGateway.findByIds() for efficient batch queries
- Replace Thread.start() with @Async for admin operations

Code Quality (Medium):
- Create unified Icon component library (13 icons)
- Create AppInput component with validation states
- Add ARIA accessibility labels to Sidebar
- Add keyboard navigation to ProductCard
- Fix light mode CSS switching

Database:
- Add V3 migration for user role column

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>